refactor: merge all linux pkg builds

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,193 +96,22 @@ jobs:
             FURY_ACCOUNT: ${{ secrets.FURY_ACCOUNT }}
             FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  ######################
-  ####   FRONTEND   ####
-  ######################
-  frontend:
+  ##############################
+  ####  Linux pkg via NPFM  ####
+  ##############################
+  linux-pkg:
     strategy:
       matrix:
         include:
           - service: frontend
             arch: amd64
             pkg_arch: all
-    runs-on:
-      labels: ubuntu-latest
-    steps:
-
-      - name: Store new version in env
-        run: echo "TAG=${GITHUB_REF##refs/*/}" >> $GITHUB_ENV
-
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          # ref: ${{ env.TAG }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Install GemFury CLI
-        run: |
-          sudo bash -c "echo 'deb [trusted=yes] https://apt.fury.io/cli/ * *' > /etc/apt/sources.list.d/fury-cli.list"
-          sudo apt-get update
-          sudo apt-get install -y fury-cli
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.22"
-
-      - name: Install nfpm
-        run: go install github.com/goreleaser/nfpm/v2/cmd/nfpm@latest
-
-      - name: Release
-        working-directory: frontend
-        env:
-          FURY_ACCOUNT: ${{ secrets.FURY_ACCOUNT }}
-          FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          docker buildx build --load --platform=linux/${{ matrix.arch }} -t ${{ matrix.service }} .
-          docker create --name tc ${{ matrix.service }}
-          mkdir -p ./dist/app
-          sh ./distribution/copy-assets.sh
-          docker rm tc
-          sed -i -E 's/version: .*$/version: '"${TAG}"'/' nfpm.yaml
-          sed -i -E 's/arch: .*$/arch: '"${{ matrix.pkg_arch }}"'/' nfpm.yaml
-          nfpm pkg --packager rpm --target dist/
-          nfpm pkg --packager deb --target dist/
-          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
-          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
-  ######################
-  ####   INVENTORY  ####
-  ######################
-  inventory:
-    strategy:
-      matrix:
-        include:
           - service: inventory
             arch: amd64
             pkg_arch: all
-    runs-on:
-      labels: ubuntu-latest
-    steps:
-
-      - name: Store new version in env
-        run: echo "TAG=${GITHUB_REF##refs/*/}" >> $GITHUB_ENV
-
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          # ref: ${{ env.TAG }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Install GemFury CLI
-        run: |
-          sudo bash -c "echo 'deb [trusted=yes] https://apt.fury.io/cli/ * *' > /etc/apt/sources.list.d/fury-cli.list"
-          sudo apt-get update
-          sudo apt-get install -y fury-cli
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.22"
-
-      - name: Install nfpm
-        run: go install github.com/goreleaser/nfpm/v2/cmd/nfpm@latest
-
-      - name: Release
-        working-directory: inventory
-        env:
-          FURY_ACCOUNT: ${{ secrets.FURY_ACCOUNT }}
-          FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          docker buildx build --load --platform=linux/${{ matrix.arch }} -t ${{ matrix.service }} .
-          docker create --name tc ${{ matrix.service }}
-          mkdir -p ./dist/app
-          sh ./distribution/copy-assets.sh
-          docker rm tc
-          sed -i -E 's/version: .*$/version: '"${TAG}"'/' nfpm.yaml
-          sed -i -E 's/arch: .*$/arch: '"${{ matrix.pkg_arch }}"'/' nfpm.yaml
-          nfpm pkg --packager rpm --target dist/
-          nfpm pkg --packager deb --target dist/
-          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
-          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
-  ######################
-  ####    COUPON    ####
-  ######################
-  coupon:
-    strategy:
-      matrix:
-        include:
           - service: coupon
             arch: amd64
             pkg_arch: all
-    runs-on:
-      labels: ubuntu-latest
-    steps:
-
-      - name: Store new version in env
-        run: echo "TAG=${GITHUB_REF##refs/*/}" >> $GITHUB_ENV
-
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          # ref: ${{ env.TAG }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Install GemFury CLI
-        run: |
-          sudo bash -c "echo 'deb [trusted=yes] https://apt.fury.io/cli/ * *' > /etc/apt/sources.list.d/fury-cli.list"
-          sudo apt-get update
-          sudo apt-get install -y fury-cli
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.22"
-
-      - name: Install nfpm
-        run: go install github.com/goreleaser/nfpm/v2/cmd/nfpm@latest
-
-      - name: Release
-        working-directory: coupon
-        env:
-          FURY_ACCOUNT: ${{ secrets.FURY_ACCOUNT }}
-          FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          docker buildx build --load --platform=linux/${{ matrix.arch }} -t ${{ matrix.service }} .
-          docker create --name tc ${{ matrix.service }}
-          mkdir -p ./dist/app
-          sh ./distribution/copy-assets.sh
-          docker rm tc
-          sed -i -E 's/version: .*$/version: '"${TAG}"'/' nfpm.yaml
-          sed -i -E 's/arch: .*$/arch: '"${{ matrix.pkg_arch }}"'/' nfpm.yaml
-          nfpm pkg --packager rpm --target dist/
-          nfpm pkg --packager deb --target dist/
-          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
-          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
-  ######################
-  ####    PRICING   ####
-  ######################
-  pricing:
-    strategy:
-      matrix:
-        include:
           - service: pricing
             arch: amd64
             pkg_arch: amd64
