--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,6 @@
 name: Release Demo Services
 
 on:
-  pull_request:
-    branches:
-      - main
   push:
     tags:
       - "v*"
@@ -66,7 +63,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # ref: ${{ env.TAG }}
+          ref: ${{ env.TAG }}
 
       - name: Set env
         id: vars
@@ -128,7 +125,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # ref: ${{ env.TAG }}
+          ref: ${{ env.TAG }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -166,5 +163,5 @@ jobs:
           sed -i -E 's/arch: .*$/arch: '"${{ matrix.pkg_arch }}"'/' nfpm.yaml
           nfpm pkg --packager rpm --target dist/
           nfpm pkg --packager deb --target dist/
-          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
-          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
+          fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
+          fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
