--- a/coupon/package.json
+++ b/coupon/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@opentelemetry/api": "1.8.0",
     "axios": "^1.5.0",
     "express": "^4.18.2"
   }
