--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: coupon
-        image: keyval/odigos-demo-coupon:v0.1.14
+        image: registry.odigos.io/odigos-demo-coupon:v0.1.14
         imagePullPolicy: Always
         env:
           - name: MEMBERSHIP_SERVICE_HOST
@@ -52,7 +52,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: keyval/odigos-demo-frontend:v0.1.14
+        image: registry.odigos.io/odigos-demo-frontend:v0.1.14
         imagePullPolicy: Always
         env:
         - name: INVENTORY_SERVICE_HOST
@@ -93,7 +93,7 @@ spec:
     spec:
       containers:
       - name: inventory
-        image: keyval/odigos-demo-inventory:v0.1.14
+        image: registry.odigos.io/odigos-demo-inventory:v0.1.14
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -127,7 +127,7 @@ spec:
     spec:
       containers:
       - name: membership
-        image: keyval/odigos-demo-membership:v0.1.14
+        image: registry.odigos.io/odigos-demo-membership:v0.1.14
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -161,7 +161,7 @@ spec:
     spec:
       containers:
       - name: pricing
-        image: keyval/odigos-demo-pricing:v0.1.14
+        image: registry.odigos.io/odigos-demo-pricing:v0.1.14
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
