--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -14,14 +14,14 @@ spec:
         app: coupon
     spec:
       containers:
-      - name: coupon
-        image: registry.odigos.io/odigos-demo-coupon:v0.1.14
-        imagePullPolicy: Always
-        env:
-          - name: MEMBERSHIP_SERVICE_HOST
-            value: "membership:8080"
-        ports:
-        - containerPort: 8080
+        - name: coupon
+          image: registry.odigos.io/odigos-demo-coupon:v0.1.14
+          imagePullPolicy: Always
+          env:
+            - name: MEMBERSHIP_SERVICE_HOST
+              value: 'membership:8080'
+          ports:
+            - containerPort: 8080
 ---
 kind: Service
 apiVersion: v1
@@ -51,18 +51,20 @@ spec:
         app: frontend
     spec:
       containers:
-      - name: frontend
-        image: registry.odigos.io/odigos-demo-frontend:v0.1.14
-        imagePullPolicy: Always
-        env:
-        - name: INVENTORY_SERVICE_HOST
-          value: inventory:8080
-        - name: PRICING_SERVICE_HOST
-          value: pricing:8080
-        - name: COUPON_SERVICE_HOST
-          value: coupon:8080
-        ports:
-        - containerPort: 8080
+        - name: frontend
+          image: registry.odigos.io/odigos-demo-frontend:v0.1.14
+          imagePullPolicy: Always
+          env:
+            - name: INVENTORY_SERVICE_HOST
+              value: inventory:8080
+            - name: PRICING_SERVICE_HOST
+              value: pricing:8080
+            - name: COUPON_SERVICE_HOST
+              value: coupon:8080
+            - name: CURRENCY_SERVICE_HOST
+              value: currency:8080
+          ports:
+            - containerPort: 8080
 ---
 kind: Service
 apiVersion: v1
@@ -92,11 +94,11 @@ spec:
         app: inventory
     spec:
       containers:
-      - name: inventory
-        image: registry.odigos.io/odigos-demo-inventory:v0.1.14
-        imagePullPolicy: Always
-        ports:
-        - containerPort: 8080
+        - name: inventory
+          image: registry.odigos.io/odigos-demo-inventory:v0.1.14
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 8080
 ---
 kind: Service
 apiVersion: v1
@@ -126,11 +128,11 @@ spec:
         app: membership
     spec:
       containers:
-      - name: membership
-        image: registry.odigos.io/odigos-demo-membership:v0.1.14
-        imagePullPolicy: Always
-        ports:
-        - containerPort: 8080
+        - name: membership
+          image: registry.odigos.io/odigos-demo-membership:v0.1.14
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 8080
 ---
 kind: Service
 apiVersion: v1
@@ -160,11 +162,11 @@ spec:
         app: pricing
     spec:
       containers:
-      - name: pricing
-        image: registry.odigos.io/odigos-demo-pricing:v0.1.14
-        imagePullPolicy: Always
-        ports:
-        - containerPort: 8080
+        - name: pricing
+          image: registry.odigos.io/odigos-demo-pricing:v0.1.14
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 8080
 ---
 kind: Service
 apiVersion: v1
@@ -173,6 +175,40 @@ metadata:
 spec:
   selector:
     app: pricing
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: currency
+  labels:
+    app: currency
+spec:
+  selector:
+    matchLabels:
+      app: currency
+  template:
+    metadata:
+      labels:
+        app: currency
+    spec:
+      containers:
+        - name: currency
+          image: registry.odigos.io/odigos-demo-currency:v0.1.14
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 8080
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: currency
+spec:
+  selector:
+    app: currency
   ports:
     - protocol: TCP
       port: 8080
