--- a/frontend/deployment/deployment.yaml
+++ b/frontend/deployment/deployment.yaml
@@ -14,14 +14,16 @@ spec:
         app: frontend
     spec:
       containers:
-      - name: frontend
-        image: dev/frontend:dev
-        env:
-        - name: INVENTORY_SERVICE_HOST
-          value: inventory:8080
-        - name: PRICING_SERVICE_HOST
-          value: pricing:8080
-        - name: COUPON_SERVICE_HOST
-          value: coupon:8080
-        ports:
-        - containerPort: 8080
+        - name: frontend
+          image: dev/frontend:dev
+          env:
+            - name: INVENTORY_SERVICE_HOST
+              value: inventory:8080
+            - name: PRICING_SERVICE_HOST
+              value: pricing:8080
+            - name: COUPON_SERVICE_HOST
+              value: coupon:8080
+            - name: CURRENCY_SERVICE_HOST
+              value: currency:8080
+          ports:
+            - containerPort: 8080
