--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: coupon
-          image: registry.odigos.io/odigos-demo-coupon:v0.1.14
+          image: registry.odigos.io/odigos-demo-coupon:v0.1.15
           imagePullPolicy: Always
           env:
             - name: MEMBERSHIP_SERVICE_HOST
@@ -52,8 +52,8 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: registry.odigos.io/odigos-demo-frontend:v0.1.14
-          imagePullPolicy: Always
+          image: registry.odigos.io/odigos-demo-frontend:v0.1.15
+          imagePullPolicy: IfNotPresent
           env:
             - name: INVENTORY_SERVICE_HOST
               value: inventory:8080
@@ -95,7 +95,7 @@ spec:
     spec:
       containers:
         - name: inventory
-          image: registry.odigos.io/odigos-demo-inventory:v0.1.14
+          image: registry.odigos.io/odigos-demo-inventory:v0.1.15
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -129,7 +129,7 @@ spec:
     spec:
       containers:
         - name: membership
-          image: registry.odigos.io/odigos-demo-membership:v0.1.14
+          image: registry.odigos.io/odigos-demo-membership:v0.1.15
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -163,7 +163,7 @@ spec:
     spec:
       containers:
         - name: pricing
-          image: registry.odigos.io/odigos-demo-pricing:v0.1.14
+          image: registry.odigos.io/odigos-demo-pricing:v0.1.15
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -197,8 +197,8 @@ spec:
     spec:
       containers:
         - name: currency
-          image: registry.odigos.io/odigos-demo-currency:v0.1.14
-          imagePullPolicy: Always
+          image: registry.odigos.io/odigos-demo-currency:v0.1.15
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
 ---
