--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -53,9 +53,7 @@ spec:
       containers:
         - name: frontend
           image: registry.odigos.io/odigos-demo-frontend:v0.1.15
-          imagePullPolicy: Always
-          securityContext:
-            runAsUser: 1000
+          imagePullPolicy: IfNotPresent
           env:
             - name: INVENTORY_SERVICE_HOST
               value: inventory:8080
@@ -67,18 +65,6 @@ spec:
               value: currency:8080
           ports:
             - containerPort: 8080
-          readinessProbe:
-            httpGet:
-              path: /actuator/health/readiness
-              port: 8080
-            initialDelaySeconds: 5
-            periodSeconds: 5
-          livenessProbe:
-            httpGet:
-              path: /actuator/health/liveness
-              port: 8080
-            initialDelaySeconds: 5
-            periodSeconds: 5
 ---
 kind: Service
 apiVersion: v1
@@ -212,7 +198,7 @@ spec:
       containers:
         - name: currency
           image: registry.odigos.io/odigos-demo-currency:v0.1.15
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
 ---
