feat: use php-fpm for production grade runtime

--- a/currency/Dockerfile
+++ b/currency/Dockerfile
@@ -1,15 +1,18 @@
-FROM php:8.2-cli
+FROM php:8.2-fpm
 WORKDIR /app
 COPY . /app
 
 RUN apt-get update && apt-get install -y \
-    git \
-    curl \
-    zip \
-    unzip
+  git \
+  curl \
+  zip \
+  unzip
+
+RUN docker-php-ext-install pcntl
 
 RUN curl -sS https://getcomposer.org/installer | php && \
   mv composer.phar /usr/local/bin/composer && \
   composer install
 
-CMD ["php", "-S", "0.0.0.0:8080"]
+EXPOSE 9000
+CMD ["php-fpm"]
