--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       INVENTORY_SERVICE_HOST: inventory:8082
       PRICING_SERVICE_HOST: pricing:8083
       COUPON_SERVICE_HOST: coupon:8084
-      CURRENCY_SERVICE_HOST: currency:8085
+      CURRENCY_SERVICE_HOST: nginx:8085
   membership:
     build:
       context: ./membership
@@ -49,7 +49,30 @@ services:
   currency:
     build:
       context: ./currency
+    expose:
+      - "9000"
+    ports:
+      - "9000:9000"
+    environment:
+      PORT: 9000
+  nginx:
+    image: nginx:alpine
+    depends_on:
+      - currency
     ports:
       - "8085:8085"
     environment:
       PORT: 8085
+    command: >
+      sh -c "echo '
+        server {
+          listen 8085;
+          server_name localhost;
+
+          location / {
+              include fastcgi_params;
+              fastcgi_pass currency:9000;
+              fastcgi_param SCRIPT_FILENAME /app/index.php;
+          }
+        }
+      ' > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
