--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,3 +1,6 @@
+##################################################
+# Coupon (JavaScript)
+##################################################
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -34,7 +37,49 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
+
 ---
+##################################################
+# Currency (PHP)
+##################################################
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: currency
+  labels:
+    app: currency
+spec:
+  selector:
+    matchLabels:
+      app: currency
+  template:
+    metadata:
+      labels:
+        app: currency
+    spec:
+      containers:
+        - name: currency
+          image: registry.odigos.io/odigos-demo-currency:v0.1.16
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 8080
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: currency
+spec:
+  selector:
+    app: currency
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
+
+---
+##################################################
+# Frontend (Java)
+##################################################
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -77,7 +122,11 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
+
 ---
+##################################################
+# Inventory (Python)
+##################################################
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -111,7 +160,11 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
+
 ---
+##################################################
+# Membership (Golang)
+##################################################
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -145,7 +198,11 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
+
 ---
+##################################################
+# Pricing (.NET)
+##################################################
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -175,40 +232,6 @@ metadata:
 spec:
   selector:
     app: pricing
-  ports:
-    - protocol: TCP
-      port: 8080
-      targetPort: 8080
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: currency
-  labels:
-    app: currency
-spec:
-  selector:
-    matchLabels:
-      app: currency
-  template:
-    metadata:
-      labels:
-        app: currency
-    spec:
-      containers:
-        - name: currency
-          image: registry.odigos.io/odigos-demo-currency:v0.1.16
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 8080
----
-kind: Service
-apiVersion: v1
-metadata:
-  name: currency
-spec:
-  selector:
-    app: currency
   ports:
     - protocol: TCP
       port: 8080
