--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: coupon
-          image: registry.odigos.io/odigos-demo-coupon:v0.1.18
+          image: registry.odigos.io/odigos-demo-coupon:v0.1.19
           imagePullPolicy: Always
           env:
             - name: MEMBERSHIP_SERVICE_HOST
@@ -59,8 +59,11 @@ spec:
     spec:
       containers:
         - name: currency
-          image: registry.odigos.io/odigos-demo-currency:v0.1.18
+          image: registry.odigos.io/odigos-demo-currency:v0.1.19
           imagePullPolicy: Always
+          env:
+            - name: GEOLOCATION_SERVICE_HOST
+              value: geolocation:8080
           ports:
             - containerPort: 9000
         - name: nginx
@@ -125,7 +128,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: registry.odigos.io/odigos-demo-frontend:v0.1.18
+          image: registry.odigos.io/odigos-demo-frontend:v0.1.19
           imagePullPolicy: Always
           env:
             - name: INVENTORY_SERVICE_HOST
@@ -153,6 +156,60 @@ spec:
 
 ---
 ##################################################
+# Geolocation (Ruby on Rails)
+##################################################
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: geolocation
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: geolocation
+  template:
+    metadata:
+      labels:
+        app: geolocation
+    spec:
+      containers:
+        - name: geolocation
+          image: registry.odigos.io/odigos-demo-geolocation:v0.1.19
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 80
+          env:
+            - name: RAILS_ENV
+              value: 'production'
+            - name: RAILS_MASTER_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: rails-master-key
+                  key: master.key
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: rails-master-key
+type: Opaque
+stringData:
+  master.key: 'b28f0011734d7ca9d6092292bd2b9199'
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: geolocation
+spec:
+  selector:
+    app: geolocation
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 80
+  type: LoadBalancer
+
+---
+##################################################
 # Inventory (Python)
 ##################################################
 apiVersion: apps/v1
@@ -172,7 +229,7 @@ spec:
     spec:
       containers:
         - name: inventory
-          image: registry.odigos.io/odigos-demo-inventory:v0.1.18
+          image: registry.odigos.io/odigos-demo-inventory:v0.1.19
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -210,7 +267,7 @@ spec:
     spec:
       containers:
         - name: membership
-          image: registry.odigos.io/odigos-demo-membership:v0.1.18
+          image: registry.odigos.io/odigos-demo-membership:v0.1.19
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -248,7 +305,7 @@ spec:
     spec:
       containers:
         - name: pricing
-          image: registry.odigos.io/odigos-demo-pricing:v0.1.18
+          image: registry.odigos.io/odigos-demo-pricing:v0.1.19
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
