--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     build:
       context: ./frontend
     ports:
-      - "8080:8080"
+      - '8080:8080'
     environment:
       PORT: 8080
       MEMBERSHIP_SERVICE_HOST: membership:8081
@@ -18,14 +18,14 @@ services:
     build:
       context: ./membership
     ports:
-      - "8081:8081"
+      - '8081:8081'
     environment:
       PORT: 8081
   inventory:
     build:
       context: ./inventory
     ports:
-      - "8082:8082"
+      - '8082:8082'
     environment:
       PORT: 8082
       PYTHONPATH: /opt/odigos-demo-inventory/site-packages
@@ -35,14 +35,14 @@ services:
     build:
       context: ./pricing
     ports:
-      - "8083:8083"
+      - '8083:8083'
     environment:
       HTTP_PORTS: 8083
   coupon:
     build:
       context: ./coupon
     ports:
-      - "8084:8084"
+      - '8084:8084'
     environment:
       PORT: 8084
       MEMBERSHIP_SERVICE_HOST: membership:8081
@@ -50,17 +50,18 @@ services:
     build:
       context: ./currency
     expose:
-      - "9000"
+      - '9000'
     ports:
-      - "9000:9000"
+      - '9000:9000'
     environment:
       PORT: 9000
+      GEOLOCATION_SERVICE_HOST: geolocation:8086
   nginx:
     image: nginx:alpine
     depends_on:
       - currency
     ports:
-      - "8085:8085"
+      - '8085:8085'
     environment:
       PORT: 8085
     command: >
@@ -76,3 +77,11 @@ services:
           }
         }
       ' > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+  geolocation:
+    build:
+      context: ./geolocation
+    ports:
+      - '8086:8086'
+    environment:
+      PORT: 8086
+      RAILS_MASTER_KEY: b28f0011734d7ca9d6092292bd2b9199
