--- a/frontend/distribution/systemd.service
+++ b/frontend/distribution/systemd.service
@@ -17,6 +17,7 @@ Environment="INVENTORY_SERVICE_HOST=localhost:8082"
 Environment="PRICING_SERVICE_HOST=localhost:8083"
 Environment="COUPON_SERVICE_HOST=localhost:8084"
 Environment="CURRENCY_SERVICE_HOST=localhost:8085"
+Environment="GEOLOCATION_SERVICE_HOST=localhost:8086"
 
 [Install]
 WantedBy=multi-user.target
