--- a/currency/distribution/systemd.service
+++ b/currency/distribution/systemd.service
@@ -1,20 +1,12 @@
 [Unit]
-Description=PHP-FPM and Nginx Service
-After=network.target
+Description=Odigos Demo Currency – Nginx vhost
+After=network.target php8.3-fpm.service nginx.service
+Requires=php8.3-fpm.service nginx.service
 
 [Service]
-WorkingDirectory=/opt/odigos-demo-currency
-ExecStart=/bin/sh -c "php-fpm & nginx -g 'daemon off;'"
-KillMode=mixed
-Restart=on-failure
-RestartSec=1s
-RestartSteps=1s
-RestartMaxDelaySec=1min
-Type=simple
-User=odigos
-Group=odigos
-Environment="PORT=8085"
-Environment="GEOLOCATION_SERVICE_HOST=localhost:8086"
+Type=oneshot
+ExecStart=/bin/true
+RemainAfterExit=yes
 
 [Install]
 WantedBy=multi-user.target
