--- a/currency/nfpm.yaml
+++ b/currency/nfpm.yaml
@@ -1,22 +1,39 @@
 name: odigos-demo-currency
-arch: all
+arch: amd64
 platform: linux
-version: 1.0.0
+version: 0.0.1
 section: default
 priority: extra
 maintainer: Odigos
 description: |
-  Demo PHP application for testing Odigos
+  Demo PHP application for testing Odigos.
 vendor: Odigos
 homepage: https://odigos.io
 depends:
   - php
+  - php-fpm
+  - nginx-full       (>= 1.18)
 contents:
-  - src: distribution/systemd.service
-    dst: /lib/systemd/system/odigos-demo-currency.service
+  # PHP application – built artefact
   - src: ./dist/app
     dst: /opt/odigos-demo-currency
+
+  # Nginx virtual host
+  - src: distribution/nginx.conf
+    dst: /etc/nginx/sites-available/odigos-demo-currency.conf
+    type: config
+
+  # php‑fpm pool
+  - src: distribution/php-fpm.conf
+    dst: /etc/php/8.2/fpm/pool.d/odigos-demo-currency.conf
+    type: config
+
+  # “umbrella” systemd unit
+  - src: distribution/odigos-demo-currency.service
+    dst: /lib/systemd/system/odigos-demo-currency.service
+    type: config
+
 scripts:
-  preinstall: ./distribution/preinstall.sh
-  postinstall: ./distribution/postinstall.sh
-  preremove: ./distribution/preremove.sh
+  preinstall:  distribution/preinstall.sh
+  postinstall: distribution/postinstall.sh
+  preremove:   distribution/preremove.sh
