use right php-fpm service, run currency app headless

--- a/currency/distribution/nginx.conf
+++ b/currency/distribution/nginx.conf
@@ -1,9 +1,12 @@
 server {
-    listen 8085;               # Change to 8085 if you prefer
+    listen 8085 default_server;              # becomes the chosen vhost
     server_name _;
 
     root /opt/odigos-demo-currency;
     index index.php;
+
+    access_log  /var/log/nginx/odigos-demo-currency.access.log;
+    error_log   /var/log/nginx/odigos-demo-currency.error.log;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -11,14 +14,6 @@ server {
 
     location ~ \.php$ {
         include snippets/fastcgi-php.conf;
-        fastcgi_pass unix:/run/php/php8.3-fpm.sock;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_pass unix:/run/php/odigos-demo-currency.sock;
     }
-
-    location ~* \.(?:png|jpg|jpeg|gif|ico|css|js)$ {
-        expires 7d;
-    }
-
-    access_log /var/log/nginx/odigos-demo-currency.access.log;
-    error_log  /var/log/nginx/odigos-demo-currency.error.log;
 }
