--- a/currency/distribution/php-fpm.conf
+++ b/currency/distribution/php-fpm.conf
@@ -2,14 +2,18 @@
 user  = www-data
 group = www-data
 
-listen = /run/php/odigos-demo-currency.sock
-listen.owner = www-data
-listen.group = www-data
-listen.mode  = 0660
+listen        = /run/php/odigos-demo-currency.sock
+listen.owner  = www-data
+listen.group  = www-data
+listen.mode   = 0660
 
-pm = dynamic
-pm.max_children   = 10
-pm.start_servers  = 2
+catch_workers_output        = yes
+php_admin_flag[log_errors]  = On
+php_admin_value[error_log]  = /proc/self/fd/2
+
+pm              = dynamic
+pm.max_children = 5
+pm.start_servers = 1
 pm.min_spare_servers = 1
 pm.max_spare_servers = 3
 
