--- a/.github/workflows/pr-verify.yml
+++ b/.github/workflows/pr-verify.yml
@@ -45,4 +45,123 @@ jobs:
       - name: Verify image was created
         run: |
           docker images | grep odigos-demo-${{ matrix.service }}
-          echo "✅ Successfully built ${{ matrix.service }} Docker image" 
+          echo "✅ Successfully built ${{ matrix.service }} Docker image"
+
+  verify-linux-builds:
+    strategy:
+      matrix:
+        include:
+          - service: coupon
+            arch: amd64
+            pkg_arch: all
+          - service: currency
+            arch: amd64
+            pkg_arch: all
+          - service: frontend
+            arch: amd64
+            pkg_arch: all
+          - service: geolocation
+            arch: amd64
+            pkg_arch: all
+          - service: inventory
+            arch: amd64
+            pkg_arch: all
+          - service: pricing
+            arch: amd64
+            pkg_arch: amd64
+          - service: pricing
+            arch: arm64
+            pkg_arch: arm64
+    runs-on:
+      labels: ubuntu-latest
+    steps:
+      - name: Store new version in env
+        run: echo "TAG=${GITHUB_REF##refs/*/}" >> $GITHUB_ENV
+
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ env.TAG }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+
+      - name: Install nfpm
+        run: go install github.com/goreleaser/nfpm/v2/cmd/nfpm@latest
+
+      - name: Build
+        working-directory: ${{ matrix.service }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          docker buildx build --load --platform=linux/${{ matrix.arch }} -t ${{ matrix.service }} .
+          docker create --name tc ${{ matrix.service }}
+          mkdir -p ./dist
+          sh ./distribution/copy-assets.sh
+          docker rm tc
+          sed -i -E 's/version: .*$/version: '"${TAG}"'/' nfpm.yaml
+          sed -i -E 's/arch: .*$/arch: '"${{ matrix.pkg_arch }}"'/' nfpm.yaml
+          nfpm pkg --packager rpm --target dist/
+          nfpm pkg --packager deb --target dist/
+
+      - name: List dist
+        working-directory: ${{ matrix.service }}
+        run: |
+          echo "Local dir"
+          ls -la .
+
+          echo "dist/"
+          ls -la dist/
+
+  membership-linux-builds:
+    runs-on:
+      labels: ubuntu-latest
+    steps:
+      - name: Store new version in env
+        run: echo "TAG=${GITHUB_REF##refs/*/}" >> $GITHUB_ENV
+
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ env.TAG }}
+
+      - name: Set env
+        id: vars
+        run: |
+          SHORT_COMMIT=$(git rev-parse --short HEAD)
+          echo "short_commit=${SHORT_COMMIT}" >> $GITHUB_ENV
+
+      - name: Install GemFury CLI
+        run: |
+          sudo bash -c "echo 'deb [trusted=yes] https://apt.fury.io/cli/ * *' > /etc/apt/sources.list.d/fury-cli.list"
+          sudo apt-get update
+          sudo apt-get install -y fury-cli
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+
+      - name: Release Membership Linux Package
+        uses: goreleaser/goreleaser-action@v5
+        with:
+          distribution: goreleaser
+          version: latest
+          workdir: membership
+
+      - name: List dist
+        working-directory: membership
+        run: |
+          echo "Local dir"
+          ls -la .
+
+          echo "dist/"
+          ls -la dist/
