--- a/.github/workflows/pr-verify.yml
+++ b/.github/workflows/pr-verify.yml
@@ -72,6 +72,7 @@ jobs:
           - service: pricing
             arch: arm64
             pkg_arch: arm64
+      fail-fast: false
     runs-on:
       labels: ubuntu-latest
     steps:
