--- a/geolocation/Dockerfile
+++ b/geolocation/Dockerfile
@@ -20,10 +20,11 @@ RUN apt-get update -qq && \
     rm -rf /var/lib/apt/lists /var/cache/apt/archives
 
 # Set production environment
-ENV RAILS_ENV="production" \
-    BUNDLE_DEPLOYMENT="1" \
-    BUNDLE_PATH="/usr/local/bundle" \
-    BUNDLE_WITHOUT="development"
+ENV RAILS_ENV=production \
+    BUNDLE_WITHOUT=development:test \
+    BUNDLE_DEPLOYMENT=1 \
+    BUNDLE_DISABLE_SHARED_GEMS=1 \
+    BUNDLE_PATH=/rails/vendor/bundle
 
 # Throw-away build stage to reduce size of final image
 FROM base AS build
@@ -36,20 +37,17 @@ RUN apt-get update -qq && \
 # Install application gems
 COPY Gemfile Gemfile.lock ./
 RUN bundle install && \
-    rm -rf ~/.bundle/ "${BUNDLE_PATH}"/ruby/*/cache "${BUNDLE_PATH}"/ruby/*/bundler/gems/*/.git
+    rm -rf ~/.bundle/ /rails/vendor/bundle/ruby/*/cache /rails/vendor/bundle/ruby/*/bundler/gems/*/.git
 
 # Copy application code
 COPY . .
-
-
-
 
 # Final stage for app image
 FROM base
 
 # Copy built artifacts: gems, application
-COPY --from=build "${BUNDLE_PATH}" "${BUNDLE_PATH}"
-COPY --from=build /rails /rails
+COPY --from=build /usr/local /usr/local
+COPY --from=build /rails      /rails
 
 # Entrypoint prepares the database.
 ENTRYPOINT ["/rails/bin/docker-entrypoint"]
