--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,4 +1,36 @@
 ##################################################
+# Load Generator (CronJob)
+##################################################
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: load-generator
+  labels:
+    app: load-generator
+spec:
+  schedule: "*/1 * * * *" # runs every 1 minute
+  jobTemplate:
+    spec:
+      template:
+        metadata:
+          labels:
+            app: load-generator
+        spec:
+          restartPolicy: OnFailure
+          containers:
+            - name: load-generator
+              image: registry.odigos.io/odigos-demo-load-generator:v0.1.23
+              imagePullPolicy: Always
+              env:
+                - name: FRONTEND_SERVICE_HOST
+                  value: "frontend:8080"
+                - name: LOAD_GENERATOR_MAX_ITERATIONS
+                  value: "10"
+                - name: LOAD_GENERATOR_DELAY_SECONDS
+                  value: "3"
+
+---
+##################################################
 # Coupon (JavaScript)
 ##################################################
 apiVersion: apps/v1
@@ -182,7 +214,7 @@ spec:
             - containerPort: 3000
           env:
             - name: RAILS_ENV
-              value: 'production'
+              value: "production"
             - name: RAILS_MASTER_KEY
               valueFrom:
                 secretKeyRef:
@@ -195,7 +227,7 @@ metadata:
   name: rails-master-key
 type: Opaque
 stringData:
-  master.key: 'df0300c20246e24d331787f6540a72fa'
+  master.key: "df0300c20246e24d331787f6540a72fa"
 ---
 apiVersion: v1
 kind: Service
